fix: white space for all btn

--- a/scss/config/_base.scss
+++ b/scss/config/_base.scss
@@ -38,6 +38,9 @@ body{
 	&:active{
 		transform: translate(0, 2px);
 	}
+	@media (max-width:640px) {
+		white-space: normal;
+	}
 }
 
 .title {
